--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@types/cors": "^2.8.8",
     "@types/multer": "^1.4.4",
     "@types/yup": "^0.29.8",
     "cors": "^2.8.5",
